<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FirstActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                tools:text="@string/email" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/providerTV"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text=""
                tools:text="@string/proveedor" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/modificarButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/modificarr"
                    tools:ignore="MissingConstraints" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/recycleButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/datos" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eliminar_dades_user" />

                <Space
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/insertButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/penjar_foto" />

            </LinearLayout>

            <Button
                android:id="@+id/findPictureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escull_imatge" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
